language/move-lang/tests/move_check/borrows/mutate_full_invalid.exp
error: 

    ┌── tests/move_check/borrows/mutate_full_invalid.move:12:17 ───
    │
 12 │         let f = x;
    │                 - It is still being mutably borrowed by this reference
 13 │         *x = 0;
    │         ^^^^^^ Invalid mutation of reference.
    │

error: 

    ┌── tests/move_check/borrows/mutate_full_invalid.move:17:17 ───
    │
 17 │         let f = freeze(x);
    │                 --------- It is still being borrowed by this reference
 18 │         *x = 0;
    │         ^^^^^^ Invalid mutation of reference.
    │

error: 

    ┌── tests/move_check/borrows/mutate_full_invalid.move:22:17 ───
    │
 22 │         let f = id(x);
    │                 ----- It is still being borrowed by this reference
 23 │         *x = 0;
    │         ^^^^^^ Invalid mutation of reference.
    │

error: 

    ┌── tests/move_check/borrows/mutate_full_invalid.move:27:17 ───
    │
 27 │         let f = id_mut(x);
    │                 --------- It is still being mutably borrowed by this reference
 28 │         *x = 0;
    │         ^^^^^^ Invalid mutation of reference.
    │

